--- a/src/ui/EpisodesList/EpisodesList.module.css
+++ b/src/ui/EpisodesList/EpisodesList.module.css
@@ -8,7 +8,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  border-top: 1px solid var(--color-background-light);
+  border-top: 1px solid;
 }
 
 @media only screen and (max-width: 600px) {
@@ -24,24 +24,19 @@
   width: 100%;
 }
 
-.even {
-  background-color: var(--color-background-light);
-}
-
 .episodeListOptions {
   margin: 15px;
   padding: 15px 0;
 }
 
-
 .episodeListSearch {
   position: relative;
-  border-bottom: 1px solid var(--color-accent-gray);
+  border-bottom: 1px solid;
   margin: 15px 0;
 }
 
 .episodeListSearch svg {
-  fill: var(--color-accent-gray);
+  fill: var(--text2);
   width: 25px;
   position: absolute;
   top: 50%;
@@ -60,8 +55,6 @@
 }
 
 .episodeListOptionsSort select {
-  color: var(--color-text);
-  background: var(--color-background-light);
   border: none;
   border-radius: var(--border-radius-control);
   padding: 10px;
