--- a/src/ui/Search/Search.module.css
+++ b/src/ui/Search/Search.module.css
@@ -4,18 +4,12 @@
 
 .search input {
   height: 100%;
-  background-color: var(--color-background-search);
-  border: 1px solid var(--color-background-search);
-  box-shadow: inset 0 2px 5px rgba(0,0,0,.2);
-  color: var(--color-text-light);
   outline: none;
   padding: 16px;
 }
 
 .results {
   margin: 0;
-  background-color: var(--color-background);
-  box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
   max-height: 500px;
   overflow: auto;
   position: absolute;
@@ -26,8 +20,8 @@
   padding: 0;
 }
 
-.results li[data-highlighted="true"] {
-  background-color: var(--color-background-light);
+.results li[data-highlighted='true'] {
+  background-color: var(--surface-1);
 }
 
 .searchItem {
